--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         springBootVersion = '1.4.3.RELEASE'
     }
     repositories {
-        mavenCentral()
+        maven { url "http://jcenter.bintray.com" }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -15,7 +15,7 @@ apply plugin: 'org.springframework.boot'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    maven { url "http://jcenter.bintray.com" }
 }
 
 dependencies {
